# masters_project

./: .gitignore  CMakeLists.txt  README.md  overview.md  pyproject.toml  task.md  task2.md  task3.md  task4.md  task5.md  tmpclaude-f9f3-cwd
completed/: task1.md
conda/: meta.yaml
examples/: basic_simulation.py  verify_izhikevich.py  verify_neuron.py  visualize_network.py
src/cpp/: CMakeLists.txt
src/cpp/include/hodgkin_huxley/: izhikevich.hpp  network.hpp  neuron.hpp  neuron_base.hpp  solver.hpp
src/cpp/src/: izhikevich.cpp  network.cpp  neuron.cpp  neuron_base.cpp  solver.cpp
src/hodgkin_huxley/: __init__.py
src/python/: bindings.cpp
tests/cpp/: CMakeLists.txt  test_neuron.cpp
tests/python/: test_izhikevich.py  test_networks.py  test_neuron.py
