[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "hodgkin-huxley"
version = "0.1.0"
description = "Fast Hodgkin-Huxley neuron simulation with C++ backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
keywords = ["neuroscience", "hodgkin-huxley", "simulation", "computational-neuroscience"]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/yourusername/hodgkin-huxley"
Repository = "https://github.com/yourusername/hodgkin-huxley"
Documentation = "https://hodgkin-huxley.readthedocs.io"

[tool.scikit-build]
ninja.version = ">=1.5"
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/hodgkin_huxley"]

[tool.scikit-build.cmake]
version = ">=3.15"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
